# assorted_curiosities

./: README.md  minesweeper.cpp  test.cxx  test.rs
fluid/: _main.cpp  _main.h  fluid.cpp  fluid.h  mapbuffer.cpp  mapbuffer.h  ps_border.c  ps_decompose.c  ps_forces.c  ps_intake.c  ps_iterate.c  ps_move.c  ps_render.c  ps_substract.c  shader.cpp  shader.h  support.cpp  support.h  test.pro
fluid/GL/: glew.h  glxew.h  wglew.h
fluid/GLFW/: glfw3.h
graph/: CMakeLists.txt
graph/base_classes/: compute_quad.h  oglmanagement.cpp  oglmanagement.h  shader.cpp  shader.h  texture.cpp  texture.h
graph/base_classes/gl/: gl_buffers.h  gl_state_control.cpp  gl_state_control.h
graph/base_classes/policies/: code_policy.h  logging_policy.cpp  logging_policy.h  resource_policy.cpp  resource_policy.h
graph/demo/: demo.glsl  graph.cpp  graph.h  gui_main.cxx
graph/gui/: guicomponents.cpp  guicomponents.h  guielements.cpp  guielements.h  guilogic.cpp  guilogic.h  guimenu.cpp  guimenu.h
normalizer/: Cargo.toml
normalizer/src/: main.rs
oclparticles/: CMakeLists.txt  Particles.c  bitonic_sort.cpp  main.cpp  oclparticles.pro  particleSystem_class.cpp  particleSystem_class.h  particle_system.cpp  tools.cpp
points/: CMakeLists.txt  point_set_small.txt  solution_small.txt
points/include/: Parser.h  Point.h  PointValidation.h  Timer.h
points/src/: Parser.cpp  Point.cpp  PointValidation.cpp  main.cpp
test/MessageStore/: MessageStore.cpp  MessageStore.h  main.cpp
trash/: test.avif
